--- a/About.css
+++ b/About.css
@@ -116,7 +116,8 @@ main h1 {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  di
+  display: block;
+}
 
 /* ---------------------------  FOOTER  --------------------------------- */
 footer nav ul {
